:rocket: feat: robust Action logs (#1414)
* :rocket: feat: robust Action logs

* Format code with prettier

* :tada: feat: improved filtering

* chore: update README

* chore: minor fixes

* chore: minor bug fixes

* :tada: feat: add more types

* update deps

* chore: update migration

* chore: 1 migration

* :tada: feat: add some CAD-settings updates

Co-authored-by: deepsource-autofix[bot] <62050782+deepsource-autofix[bot]@users.noreply.github.com>

--- a/apps/client/locales/en/admin.json
+++ b/apps/client/locales/en/admin.json
@@ -13,6 +13,7 @@
     "MANAGE_CUSTOM_ROLES": "Manage Custom Roles",
     "MANAGE_COURTHOUSE": "Manage Courthouse",
     "MANAGE_PENDING_WARRANTS": "Manage Pending Warrants",
+    "MANAGE_AUDIT_LOGS": "Manage Audit Logs",
     "import": "Import",
     "IMPORT_CITIZENS": "Import Citizens",
     "IMPORT_VEHICLES": "Import Vehicles",
@@ -84,6 +85,10 @@
     "pruneUsers": "Prune Users",
     "inactiveUsers": "Inactive Users",
     "lastSeen": "Last Seen",
+    "viewDiff": "View Diff",
+    "executor": "Executor",
+    "auditLogDiff": "Audit Log Diff",
+    "noAuditLogDiff": "There is no diff for this action.",
     "manageCourthouseDescription": " Here you can manage expungement requests, name change requests and pending warrants.",
     "manageCustomFieldsDescription": "Here you can manage custom fields. These are fields can be added by any officers to citizens in name-search.",
     "manageCustomRolesDescription": "Here you can manage custom roles. These roles can be assigned to users instead of giving permissions one by one.",
@@ -148,5 +153,11 @@
     "citizenRecordsChannelInfo": "The Discord channel where new arrest reports, tickets, warrants and written warnings will be sent to.",
     "warrantsChannel": "Warrants channel",
     "warrantsChannelInfo": "The Discord channel where new warrants will be sent to."
+  },
+  "AuditLogs": {
+    "userBanned": "User: <span>{value}</span> has been banned.",
+    "deletedEntry": "Item deleted with id: <span>{value}</span>.",
+    "createdEntry": "Item created with id: <span>{value}</span>.",
+    "tempPasswordGiven": "User: <span>{value}</span> has been given a temporary password."
   }
 }
