--- a/apps/client/locales/en/leo.json
+++ b/apps/client/locales/en/leo.json
@@ -253,6 +253,9 @@
     "noExistingTones": "There are no existing tones.",
     "toneRevoked": "Tone Revoked",
     "toneRevokedText": "Tone has successfully been revoked.",
+    "involvedUnits": "Involved Units",
+    "addUnit": "Add unit",
+    "unassign": "Unassign",
     "alert_endIncident": "Are you sure you want to end this incident. It can still be viewed by officers.",
     "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
     "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone.",
