--- a/apps/client/locales/fr-FR/leo.json
+++ b/apps/client/locales/fr-FR/leo.json
@@ -253,6 +253,9 @@
     "noExistingTones": "Il n'y a aucune tonalité existante pour le moment.",
     "toneRevoked": "Tonalité révoquée",
     "toneRevokedText": "Tonalité révoquée avec succès",
+    "involvedUnits": "Unités impliquées",
+    "addUnit": "Ajouter unité",
+    "unassign": "Désassigner",
     "alert_endIncident": "Êtes-vous sûr de vouloir mettre fin à cet incident ? Il peut toujours être vu par les officiers.",
     "alert_deleteRecord": "Êtes-vous sûr de vouloir supprimer ce dossier ? Cette action ne peut être annulée.",
     "alert_deleteOfficer": "Êtes-vous sûr de vouloir supprimer <span>{officer}</span> ? Cette action ne peut être annulée.",
