--- a/apps/client/locales/de-DE/leo.json
+++ b/apps/client/locales/de-DE/leo.json
@@ -122,7 +122,7 @@
       "releaseCitizen": "Du bist im Begriff, diesen Bürger freizulassen. Bitte wähle den Grund für die Entlassung aus.",
       "reportedStolen": "Als gestohlen gemeldet",
       "pendingAccessDepartment": "Du wartest noch auf den Zugang für diese Abteilung. Dieses CAD hat eine Standardabteilung ({defaultDepartment}) festgelegt, in der Du dich befindest, bis Du akzeptiert wirst",
-      "pendingAccessDepartmentNoDefault": "Sie warten noch auf den Zugang für diese Abteilung. Es ist keine Standardabteilung eingestellt, daher ist dieses Gerät deaktiviert, bis Sie zugelassen werden.",
+      "pendingAccessDepartmentNoDefault": "Du wartest noch auf den Zugang für diese Abteilung. Es ist keine Standardabteilung eingestellt, daher ist dieses Gerät deaktiviert, bis Sie zugelassen werden.",
       "editTicket": "Ticket bearbeiten",
       "editArrestReport": "Verhaftungsbericht bearbeiten",
       "editWrittenWarning": "Schriftliche Warnung bearbeiten",
@@ -150,7 +150,7 @@
       "manageCitizenFlags": "Verwalten von Bürgerflaggen",
       "successCreateWarrant": "Erfolgreich einen Haftbefehl für {citizen} erstellt",
       "successCreateTicket": "Erfolgreich ein Ticket für {citizen} erstellt",
-      "successCreateArrestReport": "Erfolgreich einen Festnahmebericht für {Bürger} erstellt",
+      "successCreateArrestReport": "Erfolgreich einen Festnahmebericht für {citizen} erstellt",
       "successCreateWarning": "Erfolgreiche Erstellung einer schriftlichen Verwarnung für {citizen}",
       "goOnDuty": "In den Dienst gehen",
       "goOffDuty": "Außer Dienst gehen",
@@ -243,22 +243,22 @@
       "callUpdated": "Ihr Anruf #{caseNumber} wurde aktualisiert",
       "alert_deleteNote": "Bist Du sicher, dass Du diese Notiz löschen möchten? Diese Aktion kann nicht rückgängig gemacht werden.",
       "alert_deleteQualification": "Bist Du sicher, dass Du diese Qualifikation löschen möchten? Diese Aktion kann nicht rückgängig gemacht werden.",
-      "vehicleImpoundLocation": "The provided vehicle ({plate}) will be impounded at {impoundLocation}. You will be able to view this vehicle on the impound lot page.",
+      "vehicleImpoundLocation": "Das angegebene Fahrzeug ({plate}) wird am {impoundLocation} beschlagnahmt. Sie können dieses Fahrzeug auf der Seite für beschlagnahmte Fahrzeuge sehen.",
       "steamId": "Steam ID",
       "discordId": "Discord ID",
-      "citizenMissing": "WARNING: This citizen went missing on {date}",
-      "declareFound": "Declare Found",
-      "declareMissing": "Declare Missing",
-      "manageTones": "Manage Tones",
-      "noExistingTones": "There are no existing tones.",
-      "toneRevoked": "Tone Revoked",
-      "toneRevokedText": "Tone has successfully been revoked.",
-      "alert_endIncident": "Are you sure you want to end this incident. It can still be viewed by officers.",
-      "alert_deleteRecord": "Are you sure you want to delete this record? This action cannot be undone.",
-      "alert_deleteOfficer": "Are you sure you want to delete <span>{officer}</span>? This action cannot be undone.",
-      "alert_allowCheckout": "Are you sure you want to checkout this vehicle from the impound lot?",
-      "alert_deleteIncident": "Are you sure you want to delete this incident? This action cannot be undone.",
-      "alert_revokeWarrant": "Are you sure you want to revoke this warrant? This action cannot be undone."
+      "citizenMissing": "WARNUNG: Dieser Bürger ist am {date} verschwunden",
+      "declareFound": "Als gefunden melden",
+      "declareMissing": "Als vermisst erklären",
+      "manageTones": "Töne verwalten",
+      "noExistingTones": "Es sind keine Töne vorhanden.",
+      "toneRevoked": "Ton widerrufen",
+      "toneRevokedText": "Tone wurde erfolgreich widerrufen.",
+      "alert_endIncident": "Bist Du sicher, dass Du diesen Vorfall beenden willst. Er kann immer noch von Beamten eingesehen werden.",
+      "alert_deleteRecord": "Bist Du sicher, dass Du diesen Datensatz löschen willst? Diese Aktion kann nicht rückgängig gemacht werden.",
+      "alert_deleteOfficer": "Bist Du sicher, dass Du <span>{officer}</span> löschen willst? Diese Aktion kann nicht rückgängig gemacht werden.",
+      "alert_allowCheckout": "Bist Du sicher, dass Du dieses Fahrzeug aus der Beschlagnahmung auschecken willst?",
+      "alert_deleteIncident": "Bist Du sicher, dass Du dieses Ereignis löschen möchtest? Diese Aktion kann nicht rückgängig gemacht werden.",
+      "alert_revokeWarrant": "Bist Du sicher, dass Du diesen Haftbefehl widerrufen willst? Diese Aktion kann nicht rückgängig gemacht werden."
     },
     "Bolos": {
       "activeBolos": "Aktive Bolos",
@@ -273,7 +273,7 @@
       "other": "Sonstige",
       "stolen": "gestohlen",
       "filters": "Filter",
-      "alert_deleteBolo": "Bist Du sicher, dass Du diese Bolo löschen wollen? Diese Aktion kann nicht rückgängig gemacht werden"
+      "alert_deleteBolo": "Bist Du sicher, dass Du diese Bolo löschen willst? Diese Aktion kann nicht rückgängig gemacht werden"
     },
     "licenseExams": {
       "exams": "Lizenzprüfungen",
