chore: add Calls911Purge audit log type

--- a/apps/client/locales/en/admin.json
+++ b/apps/client/locales/en/admin.json
@@ -162,7 +162,8 @@
     "deleteUserApiToken": "User: <span>{value}</span>'s personal API token has been deleted.",
     "deleteUser2FA": "User: <span>{value}</span>'s 2FA has been deleted.",
     "tempPasswordGiven": "User: <span>{value}</span> has been given a temporary password.",
-    "unitsSetOffDuty": "Selected units have been set off-duty: <span>{value}</span>"
+    "unitsSetOffDuty": "Selected units have been set off-duty: <span>{value}</span>",
+    "calls911Purged": "Selected calls have been purged. These calls cannot be recovered and were deleted permanently: <span>{value}</span>. "
   },
   "ApiTokenTab": {
     "apiToken": "API Token",
