--- a/apps/client/locales/en/admin.json
+++ b/apps/client/locales/en/admin.json
@@ -163,7 +163,8 @@
     "deleteUser2FA": "User: <span>{value}</span>'s 2FA has been deleted.",
     "tempPasswordGiven": "User: <span>{value}</span> has been given a temporary password.",
     "unitsSetOffDuty": "Selected units have been set off-duty: <span>{value}</span>",
-    "calls911Purged": "Selected calls have been purged. These calls cannot be recovered and were deleted permanently: <span>{value}</span>. "
+    "calls911Purged": "Selected calls have been purged. These calls cannot be recovered and were deleted permanently: <span>{value}</span>. ",
+    "cadAPITokenRegenerated": "The CAD API token has been regenerated."
   },
   "ApiTokenTab": {
     "apiToken": "API Token",
