--- a/apps/client/locales/fr-FR/leo.json
+++ b/apps/client/locales/fr-FR/leo.json
@@ -256,6 +256,7 @@
     "involvedUnits": "Unités impliquées",
     "addUnit": "Ajouter unité",
     "unassign": "Désassigner",
+    "manageAddressFlags": "Gérer signalements d'adresse",
     "alert_endIncident": "Êtes-vous sûr de vouloir mettre fin à cet incident ? Il peut toujours être vu par les officiers.",
     "alert_deleteRecord": "Êtes-vous sûr de vouloir supprimer ce dossier ? Cette action ne peut être annulée.",
     "alert_deleteOfficer": "Êtes-vous sûr de vouloir supprimer <span>{officer}</span> ? Cette action ne peut être annulée.",
