--- a/apps/client/locales/en/admin.json
+++ b/apps/client/locales/en/admin.json
@@ -89,6 +89,7 @@
     "executor": "Executor",
     "auditLogDiff": "Audit Log Diff",
     "noAuditLogDiff": "There is no diff for this action.",
+    "connectToUser": "Connect To User",
     "manageCourthouseDescription": " Here you can manage expungement requests, name change requests and pending warrants.",
     "manageCustomFieldsDescription": "Here you can manage custom fields. These are fields can be added by any officers to citizens in name-search.",
     "manageCustomRolesDescription": "Here you can manage custom roles. These roles can be assigned to users instead of giving permissions one by one.",
