--- a/apps/client/locales/en/admin.json
+++ b/apps/client/locales/en/admin.json
@@ -89,6 +89,7 @@
     "executor": "Executor",
     "auditLogDiff": "Audit Log Diff",
     "noAuditLogDiff": "There is no diff for this action.",
+    "connectToUser": "Connect To User",
     "manageCourthouseDescription": " Here you can manage expungement requests, name change requests and pending warrants.",
     "manageCustomFieldsDescription": "Here you can manage custom fields. These are fields can be added by any officers to citizens in name-search.",
     "manageCustomRolesDescription": "Here you can manage custom roles. These roles can be assigned to users instead of giving permissions one by one.",
@@ -164,7 +165,8 @@
     "tempPasswordGiven": "User: <span>{value}</span> has been given a temporary password.",
     "unitsSetOffDuty": "Selected units have been set off-duty: <span>{value}</span>",
     "calls911Purged": "Selected calls have been purged. These calls cannot be recovered and were deleted permanently: <span>{value}</span>. ",
-    "cadAPITokenRegenerated": "The CAD API token has been regenerated."
+    "cadAPITokenRegenerated": "The CAD API token has been regenerated.",
+    "temporaryUnitCreate": "A temporary unit has been created with id: <span>{value}</span>."
   },
   "ApiTokenTab": {
     "apiToken": "API Token",
